--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.9.7",
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^10.4.3",
+    "@testing-library/react-hooks": "^3.3.0",
     "@testing-library/user-event": "^12.0.11",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
@@ -20,6 +21,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-test-renderer": "^16.13.1",
     "react-toastify": "^5.5.0",
     "reactotron-react-js": "^3.3.7",
     "serve": "^11.3.0",
@@ -31,6 +33,7 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
+    "test:coverage": "react-app-rewired test --coverage --verbose=false --watchAll=false ",
     "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
@@ -82,7 +85,20 @@
       "^@interfaces(.*)$": "<rootDir>/src/interfaces$1",
       "^@config(.*)$": "<rootDir>/src/config$1",
       "^@contexts(.*)$": "<rootDir>/src/contexts$1"
-    }
+    },
+    "collectCoverageFrom": [
+      "src/pages/**/*.tsx",
+      "src/components/**/*.tsx",
+      "src/contexts/*.tsx",
+      "!src/pages/**/*.ts",
+      "!src/components/**/*.ts",
+      "!src/services/**/*.ts",
+      "!src/styles/**/*.ts",
+      "!src/config/**/*.ts",
+      "!src/routes/**/*.tsx",
+      "!src/index.tsx",
+      "!src/App.tsx"
+    ]
   },
   "husky": {
     "hooks": {
